--- a/sit/index.html
+++ b/sit/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hakera's Tier Test Leaderboard</title>
+  <title>Hakera-s-TierList</title>
   <meta charset="UTF-8">
-
+  <h1>Hakera-s-TierList</h1>
   <style>
 #rulesBtn {
   padding: 10px 15px;
@@ -861,3 +861,4 @@ function closeProfile() {
 
 </body>
 </html>
+
