--- a/sit/index.html
+++ b/sit/index.html
@@ -4,6 +4,7 @@
   <title>Hakera-s-TierList</title>
   <meta charset="UTF-8">
   <h1>Hakera-s-TierList</h1>
+  /index.html
   <style>
 #rulesBtn {
   padding: 10px 15px;
@@ -861,4 +862,5 @@ function closeProfile() {
 
 </body>
 </html>
+
 
