--- a/sit/index.html
+++ b/sit/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<index.html>
 <head>
   <title>Hakera-s-TierList</title>
   <meta charset="UTF-8">
   <h1>Hakera-s-TierList</h1>
-  /index.html
   <style>
 #rulesBtn {
   padding: 10px 15px;
@@ -862,5 +861,6 @@ function closeProfile() {
 
 </body>
 </html>
+
 
 
