--- a/sit/index.html
+++ b/sit/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<index.html>
+<html>
 <head>
   <title>Hakera-s-TierList</title>
   <meta charset="UTF-8">
@@ -861,6 +861,7 @@ function closeProfile() {
 
 </body>
 </html>
+
 
 
 
